--- a/home.html
+++ b/home.html
@@ -5,20 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Diablo3</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-  <header>
-      <img src="Images/Diablo3Logo.png" alt="">
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>Characters</li>
-          <li>Gameplay</li>
-          <li>Story</li>
-          <li>Community</li>
+  <header class="d-flex justify-content-around pt-2 pb-1">
+      <img src="Images/Diablo3Logo.png" alt="" class="logo">
+      <nav class="navbar">
+        <ul class="navul p-3 opacity-25 border-light rounded-4 fs-5 ">
+          <li class="navitem pe-5 ">
+            <a href="#" class="navlink text-decoration-none ">Home</a>
+          </li>
+          <li class="navitem pe-5">
+            <a href="#" class="navlink text-decoration-none ">Characters</a>
+          </li>
+          <li class="navitem pe-5">
+            <a href="#" class="navlink text-decoration-none">Gameplay</a>
+          </li>
+          <li class="navitem pe-5">
+            <a href="#" class="navlink text-decoration-none">Story</a>
+          </li>
+          <li class="navitem pe-5">
+            <a href="#" class="navlink text-decoration-none">Community</a>
+          </li>
         </ul>
       </nav>
-      <a href="#">Contact</a>
+      <!--<a href="#">Contact</a>-->
+      
   </header>
 </body>
 </html>
