--- a/home.html
+++ b/home.html
@@ -1,36 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Diablo3</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Croissant+One&family=Great+Vibes&family=PT+Serif:ital,wght@0,400;0,700;1,400&family=Poppins:wght@100;200;300;400;600;700&family=Roboto:wght@300;400;500;700&family=Tangerine:wght@400;700&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
-  <header class="d-flex justify-content-around pt-2 pb-1">
-      <img src="Images/Diablo3Logo.png" alt="" class="logo">
-      <nav class="navbar">
-        <ul class="navul p-3 opacity-25 border-light rounded-4 fs-5 ">
-          <li class="navitem pe-5 ">
-            <a href="#" class="navlink text-decoration-none ">Home</a>
-          </li>
-          <li class="navitem pe-5">
-            <a href="#" class="navlink text-decoration-none ">Characters</a>
-          </li>
-          <li class="navitem pe-5">
-            <a href="#" class="navlink text-decoration-none">Gameplay</a>
-          </li>
-          <li class="navitem pe-5">
-            <a href="#" class="navlink text-decoration-none">Story</a>
-          </li>
-          <li class="navitem pe-5">
-            <a href="#" class="navlink text-decoration-none">Community</a>
-          </li>
-        </ul>
-      </nav>
-      <!--<a href="#">Contact</a>-->
-      
+  <header class="d-flex pt-2 pb-1 justify-content-around">
+    <img src="Images/Diablo3Logo.png" alt="" class="logo ">
+    <nav class="navbar  m-3 rounded-2 ">
+      <ul class="navul">
+        <li class="navitem pe-5 ">
+          <a href="#" class="navlink ">Home</a>
+        </li>
+        <li class="navitem pe-5">
+          <a href="#" class="navlink ">Characters</a>
+        </li>
+        <li class="navitem pe-5">
+          <a href="#" class="navlink">Gameplay</a>
+        </li>
+        <li class="navitem pe-5">
+          <a href="#" class="navlink">Story</a>
+        </li>
+        <li class="navitem pe-5">
+          <a href="#" class="navlink">Community</a>
+        </li>
+      </ul>
+    </nav>
   </header>
+  <div class="Hero-container d-flex flex-column align-items-center justify-content-center">
+    <div class="container-element1">
+      <p class="hero-welcome">
+        Join the Battle Against the Burning Hells
+      </p>
+    </div>
+    <div class="container-element2">
+      <p >Learn More</p>
+    </div>
+  </div>
+  
+  <div class="moto-container d-flex justify-content-between ">
+    <div class="moto-items">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vel quos sequi molestias repellendus ipsam, itaque debitis numquam tempore </p>
+    </div>
+    <div>
+      <p>Diablo 3 The moste best</p>
+    </div>
+  </div>
 </body>
+
 </html>
