Added CTA, Moto, features section in home

--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  <!--Header-->
   <header class="d-flex pt-2 pb-1 justify-content-around">
     <img src="Images/Diablo3Logo.png" alt="" class="logo ">
     <nav class="navbar  m-3 rounded-2 ">
@@ -38,25 +39,54 @@
       </ul>
     </nav>
   </header>
+  <!--Hero Section-->
   <div class="Hero-container d-flex flex-column align-items-center justify-content-center">
     <div class="container-element1">
-      <p class="hero-welcome">
+      <p class="hero-welcome mb-4 fs-3">
         Join the Battle Against the Burning Hells
       </p>
     </div>
     <div class="container-element2">
-      <p >Learn More</p>
+      <a href="#" class="hero-click m-0 p-3 rounded-2">Learn more</a>
     </div>
   </div>
-  
+  <!--Motto Section-->
   <div class="moto-container d-flex justify-content-between ">
-    <div class="moto-items">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vel quos sequi molestias repellendus ipsam, itaque debitis numquam tempore </p>
+    <div class="moto-items p-5 fs-5">
+      <p class="moto-p1 fs-2 fw-bold">
+        SEASON OF BLOOD IS <br> LIVE
+      </p>
+      <p class="moto-p2">
+        Delve into the epic, action-packed adventure where you embody one of seven unique character classes. Your
+        mission? Battle the nefarious Lord of Terror and his relentless minions. Unleash your extraordinary powers,
+        navigate treacherous dungeons, and unearth legendary loot. It's an unending clash of good versus evil.</p>
     </div>
-    <div>
-      <p>Diablo 3 The moste best</p>
+    <div class="moto-image p-5">
+      <img src="Images/Screenshot 2023-10-23 at 10.41.05 PM.png" alt="" class="moto-image1">
     </div>
   </div>
+  <!--Features icons-->
+  <div class="icon-container d-flex justify-content-around mb-2">
+    <div class="icon-box">
+      <a href="#" class="icon-head">
+        <p>Gameplay</p>
+      </a>
+      <a href="#" class="icon-body">Dive into the Heart of Action</a>
+    </div>
+    <div class="icon-box">
+      <a href="#" class="icon-head">
+        <p>Characters</p>
+      </a>
+      <a href="#" class="icon-body">Unearth the Legends of Heroism</a>
+    </div>
+    <div class="icon-box">
+      <a href="#" class="icon-head">
+        <p>Plot</p>
+      </a>
+      <a href="#" class="icon-body">When Heaven Meets Inferno</a>
+    </div>
+  </div>
+  <!--Reception-->
 </body>
 
 </html>
