Added Reviews,Footer & made whole page responsive

--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/290e127166.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -51,7 +52,7 @@
     </div>
   </div>
   <!--Motto Section-->
-  <div class="moto-container d-flex justify-content-between ">
+  <div class="moto-container d-flex justify-content-between">
     <div class="moto-items p-5 fs-5">
       <p class="moto-p1 fs-2 fw-bold">
         SEASON OF BLOOD IS <br> LIVE
@@ -61,12 +62,12 @@
         mission? Battle the nefarious Lord of Terror and his relentless minions. Unleash your extraordinary powers,
         navigate treacherous dungeons, and unearth legendary loot. It's an unending clash of good versus evil.</p>
     </div>
-    <div class="moto-image p-5">
+    <div class="moto-image p-5 d-flex">
       <img src="Images/Screenshot 2023-10-23 at 10.41.05 PM.png" alt="" class="moto-image1">
     </div>
   </div>
   <!--Features icons-->
-  <div class="icon-container d-flex justify-content-around mb-2">
+  <div class="icon-container d-flex justify-content-around flex-wrap align-items-center mb-2">
     <div class="icon-box">
       <a href="#" class="icon-head">
         <p>Gameplay</p>
@@ -87,6 +88,61 @@
     </div>
   </div>
   <!--Reception-->
+  <div class="reception-container mt-5">
+    <div>
+      <p class="reception-heading fw-bold fs-3">Reception & Reviews</p>
+    </div>
+    <div class="reception-box-conainer d-flex justify-content-around flex-wrap align-items-center mt-5">
+      <div class="card align-items-center"
+        style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
+        <img src="Logos/gamespot_logo.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Gamespot</h5>
+          <p class="card-text">Diablo III is a devilishly captivating and addictive action role-playing game.</p>
+          <h6>Rattings: 8.5/10</h6>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
+        <img src="Logos/PC_Gamer_logo.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">PC Gamer (U.K)</h5>
+          <p class="card-text"> It's a phenomenally good game, immediately fun to play and enduringly compulsive.</p>
+          <h6>Rattings: 90/100</h6>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
+        <img src="Logos/G4_logo.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">G4</h5>
+          <p class="card-text">Delivers an addictive and polished game with diverse gameplay options.</p>
+          <h6>Rattings: 4.5/5</h6>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
+        <img src="Logos/dr_disrespect.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Dr.Disrespect(The '2' Time)</h5>
+          <p class="card-text">Diablo III is alright!!</p>
+          <h6>Rattings: 6.0/10</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Footer-->
 </body>
+<div class="footer-container mt-5 p-3">
+  <footer class="footer-content">
+    <div>
+      <p>Developed by Premjoshua Talluri <i class="fa-regular fa-heart fa-beat"></i></p>
+    </div>
+    <div class="social-media d-flex justify-content-center">
+      <a href="#"><i class="fa-brands fa-facebook m-2"></i></a>
+      <a href="#"><i class="fa-brands fa-instagram m-2"></i></a>
+      <a href="#"><i class="fa-brands fa-discord m-2"></i></a>
+      <a href="#"><i class="fa-brands fa-github m-2"></i></a>
+    </div>
+    
+  </footer>
+</div>
 
 </html>
