--- a/home.html
+++ b/home.html
@@ -137,7 +137,7 @@
       <div class="social-media d-flex justify-content-center">
         <a href="#"><i class="fa-brands fa-facebook m-2"></i></a>
         <a href="#"><i class="fa-brands fa-instagram m-2"></i></a>
-        <a href="#"><i class="fa-brands fa-discord m-2"></i></a>
+        <a href="https://github.com/premjoshuatalluri"><i class="fa-brands fa-discord m-2"></i></a>
         <a href="#"><i class="fa-brands fa-github m-2"></i></a>
       </div>
     </footer>
