--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
   <section class="moto-container d-flex justify-content-between">
     <div class="moto-items p-5 fs-5">
       <p class="moto-p1 fs-2 fw-bold">
-        SEASON OF BLOOD IS <br> LIVE
+        SEASON OF BLOOD IS <br> LIVE <i class="fa-duotone fa-circle-dot fa-fade"></i>
       </p>
       <p class="moto-p2">
         Delve into the epic, action-packed adventure where you embody one of seven unique character classes. Your
