Added Links to footer

--- a/home.html
+++ b/home.html
@@ -136,9 +136,9 @@
       </div>
       <div class="social-media d-flex justify-content-center">
         <a href="#"><i class="fa-brands fa-facebook m-2"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram m-2"></i></a>
-        <a href="https://github.com/premjoshuatalluri"><i class="fa-brands fa-discord m-2"></i></a>
-        <a href="#"><i class="fa-brands fa-github m-2"></i></a>
+        <a href="https://www.instagram.com/joshua__prem/"><i class="fa-brands fa-instagram m-2"></i></a>
+        <a href="#"><i class="fa-brands fa-discord m-2"></i></a>
+        <a href="https://github.com/premjoshuatalluri"><i class="fa-brands fa-github m-2"></i></a>
       </div>
     </footer>
   </section>
