Linked home & story, Styling footer

--- a/home.html
+++ b/home.html
@@ -82,9 +82,9 @@
     </div>
     <div class="icon-box">
       <a href="#" class="icon-head">
-        <p>Plot</p>
+        <p>Story</p>
       </a>
-      <a href="#" class="icon-body">When Heaven Meets Inferno</a>
+      <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="icon-body">When Heaven Meets Inferno</a>
     </div>
   </section>
   <!--Reception-->
