Chaaracter page header,layout design

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
           <a href="#" class="navlink">Gameplay</a>
         </li>
         <li class="navitem pe-5">
-          <a href="#" class="navlink">Story</a>
+          <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="navlink">Story</a>
         </li>
         <li class="navitem pe-5">
           <a href="#" class="navlink">Community</a>
