Added content to all 7 characters

--- a/characters/characters.html
+++ b/characters/characters.html
@@ -30,7 +30,7 @@
       <article class="character-1-container">
         <div class="character-1-info d-flex justify-content-between">
           <div>
-            <img src="images/barbarian.png" alt="barbarian" class="c1-img">
+            <img src="images/c1/barbarian.png" alt="barbarian" class="c1-img">
           </div>
           <div class="character-1-stats">
             <h1>Barbarian</h1> <!-- Character name -->
@@ -44,7 +44,7 @@
             </ol>
             <div class="character-1-media d-flex justify-content-between">
               <div>
-                <video src="images/c1/barbarian-overview-en_US.mp4" controls poster="" class="c1-video"></video> 
+                <video src="images/c1/barbarian-overview-en_US.mp4" controls poster="images/c1/barbarian-thumbnail.png" class="c1-video"></video> 
               </div>
               <div class="c1-power">
                 <div class="container text-center">
@@ -63,6 +63,271 @@
                       <img src="images/c1/x_4_barbarian_whirlwind.png" alt="">
                     </div>
                   </div>
+                  <p class="skill-1">Skills</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <!--Character 2-->
+      <article class="character-1-container">
+        <div class="character-1-info d-flex justify-content-between">
+          <div class="character-2-stats">
+            <h1>Crusader</h1> <!-- Character name -->
+            <p>The Barbarian is a massive, heavily-armed warrior, a wanderer from a tribe that once guarded the sacred
+              Mount Arreat.</p> <!-- Character description -->
+            <ol>
+              <li>Fights savagely with melee weapons.</li>
+              <li>Utilizes brute strength to wield mighty two-handed weapons, a weapon in both hands, or a weapon and
+                shield.</li> 
+              <li>Builds up Fury when taking or dealing damage, then unleashes it in devastating attacks.</li> 
+            </ol>
+            <div class="character-1-media d-flex justify-content-between">
+              <div>
+                <video src="images/c1/barbarian-overview-en_US.mp4" controls poster="images/c1/barbarian-thumbnail.png" class="c2-video"></video> 
+              </div>
+              <div class="c1-power">
+                <div class="container text-center">
+                  <div class="row">
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x1_barbarian.png" alt="barbarian armor"> <!-- Image of character's armor -->
+                    </div>
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x_2_barbarian_earthquake.png" alt=""> <!-- Images of character's ability -->
+                    </div>
+                    <div class="w-100"></div>
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x_3_barbarian_wrathoftheberserker.png" alt=""> 
+                    </div>
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x_4_barbarian_whirlwind.png" alt="">
+                    </div>
+                  </div>
+                  <p class="skill-1">Skills</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="images/barbarian.png" alt="barbarian" class="c2-img">
+          </div>
+        </div>
+      </article>
+      <!-- Character-3 -->
+      <article class="character-1-container">
+        <div class="character-1-info d-flex justify-content-between">
+          <div>
+            <img src="images/barbarian.png" alt="barbarian" class="c1-img">
+          </div>
+          <div class="character-1-stats">
+            <h1>Barbarian</h1> <!-- Character name -->
+            <p>The Barbarian is a massive, heavily-armed warrior, a wanderer from a tribe that once guarded the sacred
+              Mount Arreat.</p> <!-- Character description -->
+            <ol>
+              <li>Fights savagely with melee weapons.</li>
+              <li>Utilizes brute strength to wield mighty two-handed weapons, a weapon in both hands, or a weapon and
+                shield.</li> 
+              <li>Builds up Fury when taking or dealing damage, then unleashes it in devastating attacks.</li> 
+            </ol>
+            <div class="character-1-media d-flex justify-content-between">
+              <div>
+                <video src="images/c1/barbarian-overview-en_US.mp4" controls poster="images/c1/barbarian-thumbnail.png" class="c1-video"></video> 
+              </div>
+              <div class="c1-power">
+                <div class="container text-center">
+                  <div class="row">
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x1_barbarian.png" alt="barbarian armor"> <!-- Image of character's armor -->
+                    </div>
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x_2_barbarian_earthquake.png" alt=""> <!-- Images of character's ability -->
+                    </div>
+                    <div class="w-100"></div>
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x_3_barbarian_wrathoftheberserker.png" alt=""> 
+                    </div>
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x_4_barbarian_whirlwind.png" alt="">
+                    </div>
+                  </div>
+                  <p class="skill-1">Skills</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <!--Character 4-->
+      <article class="character-1-container">
+        <div class="character-1-info d-flex justify-content-between">
+          <div class="character-2-stats">
+            <h1>Barbarian</h1> <!-- Character name -->
+            <p>The Barbarian is a massive, heavily-armed warrior, a wanderer from a tribe that once guarded the sacred
+              Mount Arreat.</p> <!-- Character description -->
+            <ol>
+              <li>Fights savagely with melee weapons.</li>
+              <li>Utilizes brute strength to wield mighty two-handed weapons, a weapon in both hands, or a weapon and
+                shield.</li> 
+              <li>Builds up Fury when taking or dealing damage, then unleashes it in devastating attacks.</li> 
+            </ol>
+            <div class="character-1-media d-flex justify-content-between">
+              <div>
+                <video src="images/c1/barbarian-overview-en_US.mp4" controls poster="images/c1/barbarian-thumbnail.png" class="c2-video"></video> 
+              </div>
+              <div class="c1-power">
+                <div class="container text-center">
+                  <div class="row">
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x1_barbarian.png" alt="barbarian armor"> <!-- Image of character's armor -->
+                    </div>
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x_2_barbarian_earthquake.png" alt=""> <!-- Images of character's ability -->
+                    </div>
+                    <div class="w-100"></div>
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x_3_barbarian_wrathoftheberserker.png" alt=""> 
+                    </div>
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x_4_barbarian_whirlwind.png" alt="">
+                    </div>
+                  </div>
+                  <p class="skill-1">Skills</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="images/barbarian.png" alt="barbarian" class="c2-img">
+          </div>
+        </div>
+      </article>
+      <!-- Character-5 -->
+      <article class="character-1-container">
+        <div class="character-1-info d-flex justify-content-between">
+          <div>
+            <img src="images/barbarian.png" alt="barbarian" class="c1-img">
+          </div>
+          <div class="character-1-stats">
+            <h1>Barbarian</h1> <!-- Character name -->
+            <p>The Barbarian is a massive, heavily-armed warrior, a wanderer from a tribe that once guarded the sacred
+              Mount Arreat.</p> <!-- Character description -->
+            <ol>
+              <li>Fights savagely with melee weapons.</li>
+              <li>Utilizes brute strength to wield mighty two-handed weapons, a weapon in both hands, or a weapon and
+                shield.</li> 
+              <li>Builds up Fury when taking or dealing damage, then unleashes it in devastating attacks.</li> 
+            </ol>
+            <div class="character-1-media d-flex justify-content-between">
+              <div>
+                <video src="images/c1/barbarian-overview-en_US.mp4" controls poster="images/c1/barbarian-thumbnail.png" class="c1-video"></video> 
+              </div>
+              <div class="c1-power">
+                <div class="container text-center">
+                  <div class="row">
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x1_barbarian.png" alt="barbarian armor"> <!-- Image of character's armor -->
+                    </div>
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x_2_barbarian_earthquake.png" alt=""> <!-- Images of character's ability -->
+                    </div>
+                    <div class="w-100"></div>
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x_3_barbarian_wrathoftheberserker.png" alt=""> 
+                    </div>
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x_4_barbarian_whirlwind.png" alt="">
+                    </div>
+                  </div>
+                  <p class="skill-1">Skills</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <!--Character 6-->
+      <article class="character-1-container">
+        <div class="character-1-info d-flex justify-content-between">
+          <div class="character-2-stats">
+            <h1>Barbarian</h1> <!-- Character name -->
+            <p>The Barbarian is a massive, heavily-armed warrior, a wanderer from a tribe that once guarded the sacred
+              Mount Arreat.</p> <!-- Character description -->
+            <ol>
+              <li>Fights savagely with melee weapons.</li>
+              <li>Utilizes brute strength to wield mighty two-handed weapons, a weapon in both hands, or a weapon and
+                shield.</li> 
+              <li>Builds up Fury when taking or dealing damage, then unleashes it in devastating attacks.</li> 
+            </ol>
+            <div class="character-1-media d-flex justify-content-between">
+              <div>
+                <video src="images/c1/barbarian-overview-en_US.mp4" controls poster="images/c1/barbarian-thumbnail.png" class="c2-video"></video> 
+              </div>
+              <div class="c1-power">
+                <div class="container text-center">
+                  <div class="row">
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x1_barbarian.png" alt="barbarian armor"> <!-- Image of character's armor -->
+                    </div>
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x_2_barbarian_earthquake.png" alt=""> <!-- Images of character's ability -->
+                    </div>
+                    <div class="w-100"></div>
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x_3_barbarian_wrathoftheberserker.png" alt=""> 
+                    </div>
+                    <div class="col-6-2 col-sm-3">
+                      <img src="images/c1/x_4_barbarian_whirlwind.png" alt="">
+                    </div>
+                  </div>
+                  <p class="skill-1">Skills</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="images/barbarian.png" alt="barbarian" class="c2-img">
+          </div>
+        </div>
+      </article>
+      <!-- Character-7 -->
+      <article class="character-1-container">
+        <div class="character-1-info d-flex justify-content-between">
+          <div>
+            <img src="images/barbarian.png" alt="barbarian" class="c1-img">
+          </div>
+          <div class="character-1-stats">
+            <h1>Barbarian</h1> <!-- Character name -->
+            <p>The Barbarian is a massive, heavily-armed warrior, a wanderer from a tribe that once guarded the sacred
+              Mount Arreat.</p> <!-- Character description -->
+            <ol>
+              <li>Fights savagely with melee weapons.</li>
+              <li>Utilizes brute strength to wield mighty two-handed weapons, a weapon in both hands, or a weapon and
+                shield.</li> 
+              <li>Builds up Fury when taking or dealing damage, then unleashes it in devastating attacks.</li> 
+            </ol>
+            <div class="character-1-media d-flex justify-content-between">
+              <div>
+                <video src="images/c1/barbarian-overview-en_US.mp4" controls poster="images/c1/barbarian-thumbnail.png" class="c1-video"></video> 
+              </div>
+              <div class="c1-power">
+                <div class="container text-center">
+                  <div class="row">
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x1_barbarian.png" alt="barbarian armor"> <!-- Image of character's armor -->
+                    </div>
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x_2_barbarian_earthquake.png" alt=""> <!-- Images of character's ability -->
+                    </div>
+                    <div class="w-100"></div>
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x_3_barbarian_wrathoftheberserker.png" alt=""> 
+                    </div>
+                    <div class="col-6 col-sm-3">
+                      <img src="images/c1/x_4_barbarian_whirlwind.png" alt="">
+                    </div>
+                  </div>
+                  <p class="skill-1">Skills</p>
                 </div>
               </div>
             </div>
