gameplay page structuring

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
           <a href="#" class="navlink ">Home</a>
         </li>
         <li class="navitem pe-5">
-          <a href="#" class="navlink ">Characters</a>
+          <a href="../assignment-1-premjoshuatalluri/characters/characters.html" class="navlink ">Characters</a>
         </li>
         <li class="navitem pe-5">
           <a href="#" class="navlink">Gameplay</a>
@@ -48,7 +48,7 @@
       </p>
     </div>
     <div class="container-element2">
-      <a href="#" class="hero-click m-0 p-3 rounded-2">Learn more</a>
+      <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="hero-click m-0 p-3 rounded-2">Learn more</a>
     </div>
   </section>
   <!--Motto Section-->
@@ -75,7 +75,7 @@
       <a href="#" class="icon-body">Dive into the Heart of Action</a>
     </div>
     <div class="icon-box">
-      <a href="#" class="icon-head">
+      <a href="../assignment-1-premjoshuatalluri/characters/characters.html" class="icon-head">
         <p>Characters</p>
       </a>
       <a href="#" class="icon-body">Unearth the Legends of Heroism</a>
