gameplay page content and stylings

--- a/gameplay/gameplay.html
+++ b/gameplay/gameplay.html
@@ -118,28 +118,58 @@
       </div>
       <div class="damage-container-1 d-flex">
         <div class="flex-fill">
-          <p>Use an offensive skill repeatedly on your foes, and you’ll notice it won’t always deal the same amount of damage. Every time you use an offensive skill, it randomly draws a number from your equipped weapon’s Damage range, which is then modified by your skill’s damage multiplier. For instance, if your weapon’s damage range is 1–10 and you use an ability that deals 200% weapon damage, you’ll deal anywhere from 2–20 damage.</p>
-          <p>The Attacks per Second value on a weapon shows how fast it can attack. The majority of your skills will resolve faster when used with speedier weapons, such as daggers. Slower weapons, like two-handed axes, typically have higher damage ranges.</p>
-          <p>A weapon’s Damage per Second value represents its overall potential, taking into account both damage and speed. Experiment with various weapon and skill combinations to discover your preferred combat style!</p>
+          <p>Use an offensive skill repeatedly on your foes, and you’ll notice it won’t always deal the same amount of
+            damage. Every time you use an offensive skill, it randomly draws a number from your equipped weapon’s Damage
+            range, which is then modified by your skill’s damage multiplier. For instance, if your weapon’s damage range
+            is 1–10 and you use an ability that deals 200% weapon damage, you’ll deal anywhere from 2–20 damage.</p>
+          <p>The Attacks per Second value on a weapon shows how fast it can attack. The majority of your skills will
+            resolve faster when used with speedier weapons, such as daggers. Slower weapons, like two-handed axes,
+            typically have higher damage ranges.</p>
+          <p>A weapon’s Damage per Second value represents its overall potential, taking into account both damage and
+            speed. Experiment with various weapon and skill combinations to discover your preferred combat style!</p>
         </div>
         <div class="flex-fill">
-          <img src="images/sword.png" alt="">
+          <img src="images/sword.png" alt="sword image">
         </div>
       </div>
       <div>
         <h2>DAMAGE TYPES</h2>
-        <p>An active damage skill always delivers its payload using a single damage type, and many rune variants can change the resulting type completely. When you select a skill, you can see what kind of damage it deals. Keep this in mind if you come across ítems that increase the effectiveness of a particular element. Regardless of the element on your equipped weapon, the skills you choose will determine the damage types you’ll unleash on the minions of the Burning Hells.</p>
-        <img src="" alt="">
-        <p></p>
+        <p>An active damage skill always delivers its payload using a single damage type, and many rune variants can
+          change the resulting type completely. When you select a skill, you can see what kind of damage it deals. Keep
+          this in mind if you come across ítems that increase the effectiveness of a particular element. Regardless of
+          the element on your equipped weapon, the skills you choose will determine the damage types you’ll unleash on
+          the minions of the Burning Hells.</p>
+        <div class="d-flex justify-content-center">
+          <img src="images/elements.jpg" alt="damage elements">
+        </div>
+        <p class="g1-p">Fire, Cold, Lightning, Poison, Arcane, Holy</p>
         <div>
           <ol style="list-style: disc;">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><b class="list-head">Physical:</b> A myriad of skills that harm enemies in conventional ways, such as the Barbarian’s Bash or the
+              Demon Hunter’s Impale, are classified as Physical. As you grow in power, several of your Physical
+              abilities will gain new runes that change their damage type while providing added effects. Abilities and
+              runes that don’t actively deal damage (such as the Crusader’s Laws of Justice and its variations) are also
+              classified as Physical, but their effects are not increased by added Physical damage on your equipment.
+            </li>
+            <li><b class="list-head">Fire:</b> Skills that deal Fire damage typically offer up unrivaled offense at the cost of utility. Massive
+              offensive bonuses, additional damage over time, and increased resource generation fuel the searing
+              destruction of your enemies.
+            <li><b class="list-head">Cold:</b> Many Cold damage skills slow or freeze your enemies; others leave them vulnerable to additional
+              damage while they are chilled or frozen.
+            </li>
+            <li> <b class="list-head">Lightning:</b> The Lightning damage variants of some abilities can stun targets, increase the number of
+              enemies affected, or reduce resource costs and cooldowns for greater efficiency in combat.
+            </li>
+            <li> <b class="list-head">Poison:</b> Vile afflictions dealt by Poison type abilities weaken enemies, damaging them over time and
+              reducing their effectiveness in combat. Many of the Witch Doctor’s offensive skills fall under this damage
+              type.
+            </li>
+            <li> <b class="list-head">Arcane:</b> Abilities that rapidly disintegrate enemies with raw magical power and elemental forces of
+              nature fit this damage type. Several of the Wizard’s offensive skills deal Arcane damage.
+            </li>
+            <li> <b class="list-head">Holy:</b> On top of dealing damage, the offensive powers of holy magic employed in battle by Crusaders and
+              Monks can disrupt enemy behavior or provide defensive bonuses.</li>
+            </li>
           </ol>
         </div>
       </div>
