making responsive for gameplay

--- a/gameplay/gameplay.html
+++ b/gameplay/gameplay.html
@@ -36,7 +36,7 @@
         <p>Playing Diablo III is straightforward. Easy-to-remember controls are used to perform most actions available
           to you.</p>
       </div>
-      <div class="imgage-1 d-flex justify-content-center">
+      <div class="imgage-1 d-flex justify-content-center flex-wrap">
         <img src="images/image1.png" alt="diablo3 overview" class="img1">
 
       </div>
@@ -58,7 +58,7 @@
     </article>
     <!--Gameplay3-->
     <article class="gameplay-3 d-flex">
-      <div>
+      <div class="action-bar-content">
         <h1>ACTION BAR</h1>
         <p>The <b>action bar</b> is a visual representation of your hero’s health, active skills, class resource, and
           other vital information.</p>
@@ -139,7 +139,7 @@
           this in mind if you come across ítems that increase the effectiveness of a particular element. Regardless of
           the element on your equipped weapon, the skills you choose will determine the damage types you’ll unleash on
           the minions of the Burning Hells.</p>
-        <div class="d-flex justify-content-center">
+        <div class="damage-elements d-flex justify-content-center">
           <img src="images/elements.jpg" alt="damage elements">
         </div>
         <p class="g1-p">Fire, Cold, Lightning, Poison, Arcane, Holy</p>
