linking the pages

--- a/home.html
+++ b/home.html
@@ -29,13 +29,10 @@
           <a href="../assignment-1-premjoshuatalluri/characters/characters.html" class="navlink ">Characters</a>
         </li>
         <li class="navitem pe-5">
-          <a href="#" class="navlink">Gameplay</a>
+          <a href="../assignment-1-premjoshuatalluri/gameplay/gameplay.html" class="navlink">Gameplay</a>
         </li>
         <li class="navitem pe-5">
           <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="navlink">Story</a>
-        </li>
-        <li class="navitem pe-5">
-          <a href="#" class="navlink">Community</a>
         </li>
       </ul>
     </nav>
@@ -69,22 +66,22 @@
   <!--Features icons-->
   <section class="icon-container d-flex justify-content-around flex-wrap align-items-center mb-2">
     <div class="icon-box">
-      <a href="#" class="icon-head">
-        <p>Gameplay</p>
+      <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="icon-head">
+        <p>Story</p>
       </a>
-      <a href="#" class="icon-body">Dive into the Heart of Action</a>
+      <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="icon-body">When Heaven Meets Inferno</a>
     </div>
     <div class="icon-box">
       <a href="../assignment-1-premjoshuatalluri/characters/characters.html" class="icon-head">
         <p>Characters</p>
       </a>
-      <a href="#" class="icon-body">Unearth the Legends of Heroism</a>
+      <a href="../assignment-1-premjoshuatalluri/characters/characters.html" class="icon-body">Unearth the Legends of Heroism</a>
     </div>
     <div class="icon-box">
-      <a href="#" class="icon-head">
-        <p>Story</p>
+      <a href="../assignment-1-premjoshuatalluri/gameplay/gameplay.html" class="icon-head">
+        <p>Gameplay</p>
       </a>
-      <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="icon-body">When Heaven Meets Inferno</a>
+      <a href="../assignment-1-premjoshuatalluri/gameplay/gameplay.html" class="icon-body">Dive into the Heart of Action</a>
     </div>
   </section>
   <!--Reception-->
