--- a/Story/story.html
+++ b/Story/story.html
@@ -22,7 +22,7 @@
     <article class="header-conatiner d-flex justify-content-between align-items-center">
       <a href="../home.html"><img src="images/Diablo3Logo.png" alt="Diablo3Logo" class="h-img1"></a>
       <h1 class="h-h1 fw-bold fs-1">Story</h1>
-      <a href="../characters/characters.html"><p class="h-p1 fs-3">Gameplay</p></a>
+      <a href="../characters/characters.html" style="text-decoration: none;"><p class="h-p1 fs-3">Characters</p></a>
     </article>
   </header>
   <!--Story-->
